Display money raised on front page

--- a/app/views/pages/_marketing.html.haml
+++ b/app/views/pages/_marketing.html.haml
@@ -1,6 +1,11 @@
 %h1
   = succeed '.' do
     This month's featured charity is
-    = Charity.featured.name
+    = @presenter.featured_charity_name
 
 %h2
+  We have raised
+  = @presenter.money_raised_in_featured_period
+  for
+  = @presenter.featured_charity_name
+  this month.
